# gaelach

./: CHANGELOG.md  README.md  pyproject.toml
gaelach/: __init__.py
gaelach/acutis/: __init__.py  affiche.py  count_na.py  count_table.py  glimpse.py  pasteurize.py
gaelach/core/: pipe.py  symbolic.py
gaelach/data/: README.md  lunar-craters.parquet  moons.parquet
gaelach/utils/: case_when.py  helpers.py  if_else.py  lambdas.py  row_contains.py
gaelach/verbs/: arrange.py  bind_cols.py  bind_rows.py  distinct.py  drop_na.py  filter.py  group_by.py  head.py  join.py  mutate.py  pivot.py  pull.py  reframe.py  relocate.py  rename.py  round.py  sample.py  select.py  separate.py  slice.py  summarize.py  tail.py  unite.py
